[package]
name = "plotters_in_raqote"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.8"
plotters = "0.3.0"
raqote_backend = {path = "raqote_backend"}